--- a/style.css
+++ b/style.css
@@ -5,12 +5,15 @@
 }
 html{
     font-size: 62.5%;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
 }
 header{
-    background-color: #2668c5;
-    width: calc(100% - 60px);
+    background-image: url("./header.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
     height: 100px;
-    margin: 30px;
+    margin-bottom: 50px;
 }
 header .header-container{
     display: flex;
@@ -19,34 +22,128 @@ header .header-container{
 }
 header .name-pag{
     color: white;
-    font-size: 5.0rem;
-    font-weight: 500;
+    font-size: 6.6rem;
+    font-weight: bold;
     margin: 10px;
     align-self: flex-end;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 header .reception{
     color: white;
-    font-size: 2.5rem;
+    font-size: 2.8rem;
     font-weight: 100;
     margin: 10px;
 }
+.inactive{
+    display: none;
+}
 main{
-    width: calc(100% - 60px);
-    height: 100%;
-    margin: 0 30px 30px 30px;
-    position: relative;
-}
-main .background-img{
-    justify-content: center;
-    position:absolute;
     width: 100%;
-    opacity: 20%;
+    height: 600px;
+    margin: 0 0 130px 0;
+    background-image: url("./logo1.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
 }
+
 .top-tiket{
-    margin: 0 5px;
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding: 0 10px 0 0;
+    margin-bottom: 50px;
+}
+.left{
+    font-size: 1.4rem;
+}
+.left .direction{
+    color: #343457;
+    font-weight:900;
+}
+.left .localitation{
+    color: #203d80;
+    font-weight: bold;
+}
+.right{
+    font-size: 1.2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: right;
+}
+.right .label{
+    color: #343457;
+    font-weight: bold;
+}
+.right .option{
+    color: #517ed9;
+    font-weight: bold;
+}
+section h2 {
+    text-align: center;
+    color: #3d3d5f;
+    font-weight:800;
+    font-size: 2.0rem;
+    margin-bottom: 50px;
+}
+section .client-name{
+    font-size: 1.4rem;
+    color: #203d80;
+    font-weight: 800;
+}
+section .contact{
+    font-size: 1.4rem;
+    color: #203d80;
+    font-weight: bold;
+}
+section .type-lap{
+    font-size: 1.4rem;
+    color: #203d80;
+    font-weight: 800;
+}
+section .desciption-problem{
+    font-size: 1.4rem;
+    color: #203d80;
+    font-weight: 800;
+}
+section .accesorios{
+    font-size: 1.4rem;
+    color: #203d80;
+    font-weight: 800;  
+}
+#accesori,#problem, #lap, #contact, #client-name, #time, #date{
+    border: none;
+    background:none;
+}
+footer{
+    width: 100%;
+    height: 100px;
+}
+footer .desc{
+    text-align: center;
+    color: red;
+    font-size: 1.2rem;
+}
+footer div{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 25px;
+}
+.footer-options{
+    text-decoration: none;
+    font-size: 1.8rem;
+    color:white;
+    font-weight: 800;
+}
+.facebook{
+    width: 50px;
+}
+.maps{
+    width: 50px;
+}
+.gmail{
+    color:black;
+    font-size: 1.4rem;
+    align-self: center;
+}
+.whatsApp{
+    width: 50px;
 }
