--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
 }
 header{
-    background-image: url("./header.jpeg");
+    background-image: url("./icons/header.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
@@ -40,7 +40,7 @@ main{
     width: 100%;
     height: 600px;
     margin: 0 0 130px 0;
-    background-image: url("./logo1.png");
+    background-image: url("./icons/logo1.png");
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
@@ -122,7 +122,7 @@ footer .desc{
     color: red;
     font-size: 1.2rem;
 }
-footer div{
+footer .redes{
     display: flex;
     justify-content: space-around;
     margin-top: 25px;
@@ -140,9 +140,12 @@ footer div{
     width: 50px;
 }
 .gmail{
-    color:black;
+    display: flex;
+    color: black;
+    flex-direction: column;
     font-size: 1.4rem;
-    align-self: center;
+    justify-content: center;
+    align-content: center;
 }
 .whatsApp{
     width: 50px;
