--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ html{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
 }
 header{
-    background-image: url("./icons/header.jpeg");
+    background-image: url("icons/header.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
@@ -40,7 +40,7 @@ main{
     width: 100%;
     height: 600px;
     margin: 0 0 130px 0;
-    background-image: url("./icons/logo1.png");
+    background-image: url("./icons/logo.png");
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
